test/reverseCtype.slq

def main(){
	f:=reverse((const x:ğ”¹[],y:ğ”¹[])mfreeâ‡’y); // error
	r:=reverse;
	return r((const x:ğ”¹[],y:ğ”¹[])mfreeâ‡’y); // error
}
